--- a/src/templates/layouts/base.twig
+++ b/src/templates/layouts/base.twig
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114728006-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114728006-1');
+</script>
     <meta charset="utf-8">
-    <meta name="description" content="">
+    <meta name="description" content="Jared is a technologist, designer and Mr. Manager from St. Louis — but he lives in Boston nowadays.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ current_page.title }}</title>
+    <title>Jared Novack</title>
 
     {% block styles %}
       <link href="https://fonts.googleapis.com/css?family=Oswald:300,500,600,700" rel="stylesheet">
