Use News Gothic; white theme

--- a/src/templates/layouts/base.twig
+++ b/src/templates/layouts/base.twig
@@ -16,7 +16,8 @@
     <title>Jared Novack</title>
 
     {% block styles %}
-      <link href="https://fonts.googleapis.com/css?family=Oswald:300,500,600,700" rel="stylesheet">
+ {#      <link href="https://fonts.googleapis.com/css?family=Oswald:300,500,600,700" rel="stylesheet"> #}
+ <link rel="stylesheet" href="https://use.typekit.net/llm4ykh.css">
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     {% endblock %}
     
