--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -6,7 +6,7 @@ $green: #4ae0ae;
 
 // Project styles go here
 body {
-	font-family: 'Oswald', sans-serif;
+	font-family: "news-gothic-std", 'Oswald', sans-serif;
 	// background-color: #1d2422;
 	// color: #CCC;
 	color: #1d2422;
@@ -14,7 +14,8 @@ body {
 }
 
 a {
-	color: $green; text-decoration: none;
+	color: darken($green, 15); 
+	text-decoration: none;
 }
 
 p, h6 {
@@ -48,12 +49,17 @@ p {
 	}
 }
 
+.index-article, .intro {
+	margin-bottom: 80px;
+}
+
 h1 {
-	font-size: 2em;
+	font-size: 3em;
+	margin-bottom: 10px;
 }
 
 h1, h2, h3, h4 {
-	font-weight: 500;
+	font-weight: 700;
 }
 
 #reading .content {
