--- a/src/templates/layouts/base.twig
+++ b/src/templates/layouts/base.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114728006-1"></script>
@@ -21,7 +21,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     {% endblock %}
     
-    <script type="text/javascript" src="/static/js/modernizr.js"></script>
+    <script src="/static/js/modernizr.js"></script>
     
   </head>
   <body>
@@ -46,7 +46,7 @@
   <!-- endbuild -->
 
   
-  <script type="text/javascript" src="/static/js/main.js"></script>
+  <script src="/static/js/main.js"></script>
   
 
   {% endblock %}
