--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -25,6 +25,13 @@ a {
 	}
 }
 
+.main-link {
+	font-weight: 600;
+	font-style: italic;
+	font-size: 16px;
+	text-transform: uppercase;
+}
+
 p, h6 {
 	font-size:19.2px;
 	font-weight: 300;
