--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -89,6 +89,13 @@ h1, h2, h3, h4 {
 	}
 }
 
+#talks .title {
+	font-weight: bold;
+}
+
+.endnote {
+	font-style: italic;
+}
 
 .main {
 	margin: auto;
