--- a/src/static/scss/main.scss
+++ b/src/static/scss/main.scss
@@ -43,7 +43,7 @@ h6 {
 	margin-top: 0;
 	margin-bottom: 10px;
 	.title {
-		font-weight: 500;
+		font-weight: 700;
 		padding-right: 2px;
 	}
 }
@@ -89,7 +89,7 @@ h1, h2, h3, h4 {
 	}
 }
 
-#talks .title {
+.title {
 	font-weight: bold;
 }
 
